WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292866
SWServer::registerServiceWorkerClient is not clearing m_clientIdentifiersPerOrigin identifiers list properly
https://bugs.webkit.org/show_bug.cgi?id=292866
Summary
SWServer::registerServiceWorkerClient is not clearing m_clientIdentifiersPerO...
youenn fablet
Reported
2025-05-12 05:43:26 PDT
SWServer::registerServiceWorkerClient is not clearing m_clientIdentifiersPerOrigin identifiers list properly
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2025-05-12 05:43:34 PDT
<
rdar://150678359
>
youenn fablet
Comment 2
2025-05-12 06:34:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45246
EWS
Comment 3
2025-05-13 00:13:00 PDT
Committed
294832@main
(ac0a643535c3): <
https://commits.webkit.org/294832@main
> Reviewed commits have been landed. Closing PR #45246 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug