SWServer::registerServiceWorkerClient is not clearing m_clientIdentifiersPerOrigin identifiers list properly https://bugs.webkit.org/show_bug.cgi?id=292866 rdar://150678359

Reviewed by Chris Dumez.

We were calling Vector::remove using a ScriptExecutionContextIdentifier which was casted as a boolean to a size_t.
We were then removing a Vector entry based on a position and not based on the value to remove.

We instead call removeFirst and make ScriptExecutionContextIdentifier bool conversion explicit.
We add a debug ASSERT to catch potential removal mismatch in existing tests.

* Source/WebCore/platform/ScriptExecutionContextIdentifier.h:
(WebCore::ProcessQualified<WTF::UUID>::operator bool const):
* Source/WebCore/workers/service/server/SWServer.cpp:
(WebCore::SWServer::registerServiceWorkerClient):

Canonical link: https://commits.webkit.org/294832@main